# static_lib_opencv_example

./: CMakeLists.txt  README.md  main.cpp
libs/opencv_install_dir/include/opencv-4.2.0-dev/opencv2/: cvconfig.h
libs/opencv_install_dir/lib/cmake/opencv-4.2.0-dev/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
